@@ -1,0 +1,31 @@
+<?php
+/* Copyright (C) 2012	Sasa Ostrouska	<casaxa@gmail.com>
+ *
+ * This program is free software; you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation; either version 2 of the License, or
+ * (at your option) any later version.
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with this program. If not, see <http://www.gnu.org/licenses/>.
+ */
+
+$debug = 1;
+
+$currentdir = getcwd();
+$includesdir = $currentdir."/../classes/";
+
+if ($debug){
+	echo $includesdir."<br>";
+}
+
+include_once($includesdir."class_pagination.inc");
+
+echo implode(" ", pagination::paginate(1200,10));
+
+?>
