@@ -1,6 +1,7 @@
 2012-07-08 Sasa Ostrouska <casaxa@gmail.com>
 
 	* Added class_pagination.inc into classes/
+	* Added test_pagination.php in tests dir.
 
 2012-06-24 Sasa Ostrouska <casaxa@gmail.com>
 
